--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.6.1",
     "react-infinite-calendar": "^2.3.1",
     "react-router-dom": "^4.1.1",
+    "react-select": "^1.0.0-rc.5",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
